# singletons-lists-props

./: CHANGELOG.md  singletons-lists-props.cabal
src/Data/Singletons/Prelude/List/: Props.hs
