cabal-version:      2.4
name:               singletons-lists-props
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Björn Gohla
maintainer:         b.gohla@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends:
    , base        ^>=4.14.3.0
    , singletons  ==2.7

  hs-source-dirs:   src
  exposed-modules:  Data.Singletons.Prelude.List.Props
  default-language: Haskell2010
  ghc-options: -Wall